# topsecret

./: package-lock.json  package.json
client/: .gitignore  package-lock.json  package.json  svelte.config.js  wrangler.toml
client/src/lib/: Editor.svelte  Preview.svelte  SiteIdForm.svelte  serverUtils.ts  utils.ts
client/src/lib/header/: Header.svelte
client/src/routes/: __layout.svelte  index.svelte  ~[id].ts
client/src/routes/upload/: index.json.ts
client/src/routes/~[id]/: edit.svelte
client/static/: sample-index.html
server/: Cargo.toml  foo.js  index.js
server/src/: main.rs
src/: app.css  app.html
src/lib/: Dropzone.svelte  Preview.svelte  SiteIdForm.svelte  autofocus.js  serverUtils.ts  utils.ts
src/routes/: __layout.svelte  index.svelte  ~[id].ts
src/routes/lock/: index.json.ts
src/routes/upload/: index.json.ts
src/routes/~[id]/: edit.svelte  edit.ts
static/: sample-index.html
