[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
poem = "1.3.0"
tokio = { version = "1.17.0", features = ["full"] }
tracing-subscriber = "0.2.24"
serde = "1.0.136"
swc = "0.144.0"
swc_common = {version = "0.17.10", features = ["sourcemap", "concurrent", "tty-emitter"]}
swc_ecmascript = {version = "0.129.0", features = ["parser"]}
swc_ecma_transforms_react = "0.91.0"
swc_ecma_transforms_base = "0.66.0"
